# BookInfo

./: .gitignore  README.md  hello.py  pyproject.toml  rename_books.py  rename_books.spec  requirements.txt  setup.py  temp.py  temp.txt
.cursor/rules/: flet-dev.mdc
bookinfo/: __init__.py  cli.py  core.py  utils.py
src/: cli.py  core.py  main.py  rename_books_gui.py  utils.py
src/bookinfo/: core.py
tests/: test_core.py  test_epub_cover.py  test_utils.py
