[project]
name = "bookinfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ebooklib>=0.19",
    "google-api-python-client>=2.170.0",
    "ipykernel>=6.29.5",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pyinstaller>=6.13.0",
    "pypdf>=5.5.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
    "tenacity>=9.1.2",
]
