[project]
name = "bookinfo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anselm Jeong", email = "anselmjeong@gmail.com" }
]
dependencies = [
  "ebooklib>=0.19",
  "flet==0.28.2",
  "google-api-python-client>=2.170.0",
  "pdfplumber>=0.11.6",
  "pillow>=11.2.1",
  "pypdf>=5.5.0",
  "python-dotenv>=1.1.0",
  "tenacity>=9.1.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "bookInfo"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}
